refactoring added log panel and live logging for the app

--- a/src/main/resources/application.css
+++ b/src/main/resources/application.css
@@ -13,3 +13,10 @@
     -fx-base: darkgreen;
     -fx-text-fill: white;
 }
+
+/* terminal.css */
+.terminal {
+    -fx-font-family: "Courier New", monospace;
+    -fx-highlight-fill: darkgreen;
+    -fx-text-fill: darkgreen;
+}
