--- a/src/main/resources/application.css
+++ b/src/main/resources/application.css
@@ -111,6 +111,10 @@
 
 .channel-logo-view {
     /*-fx-background-color: #333333;*/
-    /*-fx-background-radius: 3;*/
+    -fx-background-radius: 5;
     /*-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.15), 3, 0, 0, 1);*/
+}
+
+.video-player-slider {
+    -fx-base: white;
 }
