--- a/src/main/resources/dark-application.css
+++ b/src/main/resources/dark-application.css
@@ -221,3 +221,9 @@
     -fx-base: white;
     -fx-control-inner-background: white;
 }
+
+.table-row-cell.playing {
+        -fx-background-color: #F44336;
+        -fx-text-fill: white;
+        -fx-font-weight: bold;
+}
