--- a/src/main/resources/application.css
+++ b/src/main/resources/application.css
@@ -120,7 +120,7 @@
 }
 
 .table-row-cell.playing {
-    -fx-background-color: #F44336;
+    -fx-background-color: #1c96c5;
     -fx-text-fill: white;
     -fx-font-weight: bold;
 }
